fSharpJVML/fsharp_ssParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 3.5.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// $ANTLR 3.5.1 D:\\fsharp_compiler\\fsharp_ss.g 2015-11-29 20:58:01

// The variable 'variable' is assigned but its value is never used.
#pragma warning disable 219
// Unreachable code detected.
#pragma warning disable 162
// Missing XML comment for publicly visible type or member 'Type_or_Member'
#pragma warning disable 1591
// CLS compliance checking will not be performed on 'type' because it is not visible from outside this assembly.
#pragma warning disable 3019


using System.Collections.Generic;
using Antlr.Runtime;
using Antlr.Runtime.Misc;


using Antlr.Runtime.Tree;
using RewriteRuleITokenStream = Antlr.Runtime.Tree.RewriteRuleTokenStream;

namespace  fsharp_ss 
{
[System.CodeDom.Compiler.GeneratedCode("ANTLR", "3.5.1")]
[System.CLSCompliant(false)]
public partial class fsharp_ssParser : Antlr.Runtime.Parser
{
	internal static readonly string[] tokenNames = new string[] {
		"<invalid>", "<EOR>", "<DOWN>", "<UP>", "AND", "ARGS", "ASSIGN", "BEGIN", "BODY", "BOOL_KW", "CHAR", "CHAR_KW", "CLOSE_BR", "DIV", "DOUBLE", "DOUBLE_KW", "ELIF", "ELSE", "END", "ENTRY_POINT", "EQ", "ESC_SEQ", "EXPONENT", "EXPR", "FALSE", "FUN", "FUNCTION_CALL", "FUNCTION_DEFN", "FUN_DEF", "GE", "GT", "HEX_DIGIT", "ID", "IF", "INT", "INT_KW", "LE", "LET", "LT", "MATCH", "MINUS", "MOD", "MULT", "MUTABLE", "NAME", "NEQ", "OCTAL_ESC", "OPEN_BR", "OR", "PIPE", "PLUS", "PROGRAM", "REC", "STRING", "STRING_KW", "TAB", "THEN", "TRUE", "TYPE", "UNICODE_ESC", "UNKNOWN", "VALUE_DEFN", "WHEN", "':'", "';'"
	};
	public const int EOF=-1;
	public const int T__63=63;
	public const int T__64=64;
	public const int AND=4;
	public const int ARGS=5;
	public const int ASSIGN=6;
	public const int BEGIN=7;
	public const int BODY=8;
	public const int BOOL_KW=9;
	public const int CHAR=10;
	public const int CHAR_KW=11;
	public const int CLOSE_BR=12;
	public const int DIV=13;
	public const int DOUBLE=14;
	public const int DOUBLE_KW=15;
	public const int ELIF=16;
	public const int ELSE=17;
	public const int END=18;
	public const int ENTRY_POINT=19;
	public const int EQ=20;
	public const int ESC_SEQ=21;
	public const int EXPONENT=22;
	public const int EXPR=23;
	public const int FALSE=24;
	public const int FUN=25;
	public const int FUNCTION_CALL=26;
	public const int FUNCTION_DEFN=27;
	public const int FUN_DEF=28;
	public const int GE=29;
	public const int GT=30;
	public const int HEX_DIGIT=31;
	public const int ID=32;
	public const int IF=33;
	public const int INT=34;
	public const int INT_KW=35;
	public const int LE=36;
	public const int LET=37;
	public const int LT=38;
	public const int MATCH=39;
	public const int MINUS=40;
	public const int MOD=41;
	public const int MULT=42;
	public const int MUTABLE=43;
	public const int NAME=44;
	public const int NEQ=45;
	public const int OCTAL_ESC=46;
	public const int OPEN_BR=47;
	public const int OR=48;
	public const int PIPE=49;
	public const int PLUS=50;
	public const int PROGRAM=51;
	public const int REC=52;
	public const int STRING=53;
	public const int STRING_KW=54;
	public const int TAB=55;
	public const int THEN=56;
	public const int TRUE=57;
	public const int TYPE=58;
	public const int UNICODE_ESC=59;
	public const int UNKNOWN=60;
	public const int VALUE_DEFN=61;
	public const int WHEN=62;

	public fsharp_ssParser(ITokenStream input)
		: this(input, new RecognizerSharedState())
	{
	}
	public fsharp_ssParser(ITokenStream input, RecognizerSharedState state)
		: base(input, state)
	{
		ITreeAdaptor treeAdaptor = default(ITreeAdaptor);
		CreateTreeAdaptor(ref treeAdaptor);
		TreeAdaptor = treeAdaptor ?? new CommonTreeAdaptor();
		OnCreated();
	}
	// Implement this function in your helper file to use a custom tree adaptor
	partial void CreateTreeAdaptor(ref ITreeAdaptor adaptor);

	private ITreeAdaptor adaptor;

	public ITreeAdaptor TreeAdaptor
	{
		get
		{
			return adaptor;
		}

		set
		{
			this.adaptor = value;
		}
	}

	public override string[] TokenNames { get { return fsharp_ssParser.tokenNames; } }
	public override string GrammarFileName { get { return "D:\\fsharp_compiler\\fsharp_ss.g"; } }


	partial void OnCreated();
	partial void EnterRule(string ruleName, int ruleIndex);
	partial void LeaveRule(string ruleName, int ruleIndex);

	#region Rules
	partial void EnterRule_const();
	partial void LeaveRule_const();
	// $ANTLR start "const"
	// D:\\fsharp_compiler\\fsharp_ss.g:111:1: const : ( INT | DOUBLE | STRING | CHAR | TRUE | FALSE );
	[GrammarRule("const")]
	private AstParserRuleReturnScope<object, IToken> @const()
	{
		EnterRule_const();
		EnterRule("const", 1);
		TraceIn("const", 1);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set1 = default(IToken);

		object set1_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "const");
		DebugLocation(111, 1);
		try
		{
			// D:\\fsharp_compiler\\fsharp_ss.g:111:7: ( INT | DOUBLE | STRING | CHAR | TRUE | FALSE )
			DebugEnterAlt(1);
			// D:\\fsharp_compiler\\fsharp_ss.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(111, 7);

			set1=(IToken)input.LT(1);
			if (input.LA(1)==CHAR||input.LA(1)==DOUBLE||input.LA(1)==FALSE||input.LA(1)==INT||input.LA(1)==STRING||input.LA(1)==TRUE)
			{
				input.Consume();
				if (state.backtracking == 0) adaptor.AddChild(root_0, (object)adaptor.Create(set1));
				state.errorRecovery=false;state.failed=false;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("const", 1);
			LeaveRule("const", 1);
			LeaveRule_const();
		}
		DebugLocation(113, 1);
		} finally { DebugExitRule(GrammarFileName, "const"); }
		return retval;

	}
	// $ANTLR end "const"

	partial void EnterRule_type();
	partial void LeaveRule_type();
	// $ANTLR start "type"
	// D:\\fsharp_compiler\\fsharp_ss.g:115:1: type : ( STRING_KW | CHAR_KW | INT_KW | DOUBLE_KW | BOOL_KW );
	[GrammarRule("type")]
	private AstParserRuleReturnScope<object, IToken> type()
	{
		EnterRule_type();
		EnterRule("type", 2);
		TraceIn("type", 2);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken set2 = default(IToken);

		object set2_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "type");
		DebugLocation(115, 1);
		try
		{
			// D:\\fsharp_compiler\\fsharp_ss.g:115:6: ( STRING_KW | CHAR_KW | INT_KW | DOUBLE_KW | BOOL_KW )
			DebugEnterAlt(1);
			// D:\\fsharp_compiler\\fsharp_ss.g:
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(115, 6);

			set2=(IToken)input.LT(1);
			if (input.LA(1)==BOOL_KW||input.LA(1)==CHAR_KW||input.LA(1)==DOUBLE_KW||input.LA(1)==INT_KW||input.LA(1)==STRING_KW)
			{
				input.Consume();
				if (state.backtracking == 0) adaptor.AddChild(root_0, (object)adaptor.Create(set2));
				state.errorRecovery=false;state.failed=false;
			}
			else
			{
				if (state.backtracking>0) {state.failed=true; return retval;}
				MismatchedSetException mse = new MismatchedSetException(null,input);
				DebugRecognitionException(mse);
				throw mse;
			}


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("type", 2);
			LeaveRule("type", 2);
			LeaveRule_type();
		}
		DebugLocation(121, 1);
		} finally { DebugExitRule(GrammarFileName, "type"); }
		return retval;

	}
	// $ANTLR end "type"

	partial void EnterRule_value_defn();
	partial void LeaveRule_value_defn();
	// $ANTLR start "value_defn"
	// D:\\fsharp_compiler\\fsharp_ss.g:123:1: value_defn : ( MUTABLE )? ID ( return_type )? '=' body_expr -> ^( VALUE_DEFN ^( NAME ID ) ( MUTABLE )? ^( TYPE ( return_type )? ) body_expr ) ;
	[GrammarRule("value_defn")]
	private AstParserRuleReturnScope<object, IToken> value_defn()
	{
		EnterRule_value_defn();
		EnterRule("value_defn", 3);
		TraceIn("value_defn", 3);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken MUTABLE3 = default(IToken);
		IToken ID4 = default(IToken);
		IToken char_literal6 = default(IToken);
		AstParserRuleReturnScope<object, IToken> return_type5 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> body_expr7 = default(AstParserRuleReturnScope<object, IToken>);

		object MUTABLE3_tree = default(object);
		object ID4_tree = default(object);
		object char_literal6_tree = default(object);
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_EQ=new RewriteRuleITokenStream(adaptor,"token EQ");
		RewriteRuleITokenStream stream_MUTABLE=new RewriteRuleITokenStream(adaptor,"token MUTABLE");
		RewriteRuleSubtreeStream stream_return_type=new RewriteRuleSubtreeStream(adaptor,"rule return_type");
		RewriteRuleSubtreeStream stream_body_expr=new RewriteRuleSubtreeStream(adaptor,"rule body_expr");
		try { DebugEnterRule(GrammarFileName, "value_defn");
		DebugLocation(123, 1);
		try
		{
			// D:\\fsharp_compiler\\fsharp_ss.g:124:2: ( ( MUTABLE )? ID ( return_type )? '=' body_expr -> ^( VALUE_DEFN ^( NAME ID ) ( MUTABLE )? ^( TYPE ( return_type )? ) body_expr ) )
			DebugEnterAlt(1);
			// D:\\fsharp_compiler\\fsharp_ss.g:125:2: ( MUTABLE )? ID ( return_type )? '=' body_expr
			{
			DebugLocation(125, 2);
			// D:\\fsharp_compiler\\fsharp_ss.g:125:2: ( MUTABLE )?
			int alt1=2;
			try { DebugEnterSubRule(1);
			try { DebugEnterDecision(1, false);
			int LA1_1 = input.LA(1);

			if ((LA1_1==MUTABLE))
			{
				alt1 = 1;
			}
			} finally { DebugExitDecision(1); }
			switch (alt1)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\fsharp_compiler\\fsharp_ss.g:125:2: MUTABLE
				{
				DebugLocation(125, 2);
				MUTABLE3=(IToken)Match(input,MUTABLE,Follow._MUTABLE_in_value_defn947); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_MUTABLE.Add(MUTABLE3);


				}
				break;

			}
			} finally { DebugExitSubRule(1); }

			DebugLocation(125, 11);
			ID4=(IToken)Match(input,ID,Follow._ID_in_value_defn950); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_ID.Add(ID4);

			DebugLocation(125, 14);
			// D:\\fsharp_compiler\\fsharp_ss.g:125:14: ( return_type )?
			int alt2=2;
			try { DebugEnterSubRule(2);
			try { DebugEnterDecision(2, false);
			int LA2_1 = input.LA(1);

			if ((LA2_1==63))
			{
				alt2 = 1;
			}
			} finally { DebugExitDecision(2); }
			switch (alt2)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\fsharp_compiler\\fsharp_ss.g:125:14: return_type
				{
				DebugLocation(125, 14);
				PushFollow(Follow._return_type_in_value_defn952);
				return_type5=return_type();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_return_type.Add(return_type5.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(2); }

			DebugLocation(125, 27);
			char_literal6=(IToken)Match(input,EQ,Follow._EQ_in_value_defn955); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EQ.Add(char_literal6);

			DebugLocation(125, 31);
			PushFollow(Follow._body_expr_in_value_defn957);
			body_expr7=body_expr();
			PopFollow();
			if (state.failed) return retval;
			if (state.backtracking == 0) stream_body_expr.Add(body_expr7.Tree);


			{
			// AST REWRITE
			// elements: return_type, ID, MUTABLE, body_expr
			// token labels: 
			// rule labels: retval
			// token list labels: 
			// rule list labels: 
			// wildcard labels: 
			if (state.backtracking == 0) {
			retval.Tree = root_0;
			RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.Tree:null);

			root_0 = (object)adaptor.Nil();
			// 126:3: -> ^( VALUE_DEFN ^( NAME ID ) ( MUTABLE )? ^( TYPE ( return_type )? ) body_expr )
			{
				DebugLocation(126, 6);
				// D:\\fsharp_compiler\\fsharp_ss.g:126:6: ^( VALUE_DEFN ^( NAME ID ) ( MUTABLE )? ^( TYPE ( return_type )? ) body_expr )
				{
				object root_1 = (object)adaptor.Nil();
				DebugLocation(126, 8);
				root_1 = (object)adaptor.BecomeRoot((object)adaptor.Create(VALUE_DEFN, "VALUE_DEFN"), root_1);

				DebugLocation(126, 19);
				// D:\\fsharp_compiler\\fsharp_ss.g:126:19: ^( NAME ID )
				{
				object root_2 = (object)adaptor.Nil();
				DebugLocation(126, 21);
				root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(NAME, "NAME"), root_2);

				DebugLocation(126, 26);
				adaptor.AddChild(root_2, stream_ID.NextNode());

				adaptor.AddChild(root_1, root_2);
				}
				DebugLocation(126, 30);
				// D:\\fsharp_compiler\\fsharp_ss.g:126:30: ( MUTABLE )?
				if (stream_MUTABLE.HasNext)
				{
					DebugLocation(126, 30);
					adaptor.AddChild(root_1, stream_MUTABLE.NextNode());

				}
				stream_MUTABLE.Reset();
				DebugLocation(126, 39);
				// D:\\fsharp_compiler\\fsharp_ss.g:126:39: ^( TYPE ( return_type )? )
				{
				object root_2 = (object)adaptor.Nil();
				DebugLocation(126, 41);
				root_2 = (object)adaptor.BecomeRoot((object)adaptor.Create(TYPE, "TYPE"), root_2);

				DebugLocation(126, 46);
				// D:\\fsharp_compiler\\fsharp_ss.g:126:46: ( return_type )?
				if (stream_return_type.HasNext)
				{
					DebugLocation(126, 46);
					adaptor.AddChild(root_2, stream_return_type.NextTree());

				}
				stream_return_type.Reset();

				adaptor.AddChild(root_1, root_2);
				}
				DebugLocation(126, 60);
				adaptor.AddChild(root_1, stream_body_expr.NextTree());

				adaptor.AddChild(root_0, root_1);
				}

			}

			retval.Tree = root_0;
			}
			}

			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("value_defn", 3);
			LeaveRule("value_defn", 3);
			LeaveRule_value_defn();
		}
		DebugLocation(127, 1);
		} finally { DebugExitRule(GrammarFileName, "value_defn"); }
		return retval;

	}
	// $ANTLR end "value_defn"

	partial void EnterRule_let_expr();
	partial void LeaveRule_let_expr();
	// $ANTLR start "let_expr"
	// D:\\fsharp_compiler\\fsharp_ss.g:129:1: let_expr : LET ! ( function_defn | value_defn ) ;
	[GrammarRule("let_expr")]
	private AstParserRuleReturnScope<object, IToken> let_expr()
	{
		EnterRule_let_expr();
		EnterRule("let_expr", 4);
		TraceIn("let_expr", 4);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken LET8 = default(IToken);
		AstParserRuleReturnScope<object, IToken> function_defn9 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> value_defn10 = default(AstParserRuleReturnScope<object, IToken>);

		object LET8_tree = default(object);
		try { DebugEnterRule(GrammarFileName, "let_expr");
		DebugLocation(129, 1);
		try
		{
			// D:\\fsharp_compiler\\fsharp_ss.g:129:9: ( LET ! ( function_defn | value_defn ) )
			DebugEnterAlt(1);
			// D:\\fsharp_compiler\\fsharp_ss.g:130:2: LET ! ( function_defn | value_defn )
			{
			root_0 = (object)adaptor.Nil();

			DebugLocation(130, 5);
			LET8=(IToken)Match(input,LET,Follow._LET_in_let_expr994); if (state.failed) return retval;
			DebugLocation(130, 7);
			// D:\\fsharp_compiler\\fsharp_ss.g:130:7: ( function_defn | value_defn )
			int alt3=2;
			try { DebugEnterSubRule(3);
			try { DebugEnterDecision(3, false);
			switch (input.LA(1))
			{
			case REC:
				{
				alt3 = 1;
				}
				break;
			case ID:
				{
				int LA3_2 = input.LA(2);

				if ((LA3_2==ID||LA3_2==OPEN_BR))
				{
					alt3 = 1;
				}
				else if ((LA3_2==EQ||LA3_2==63))
				{
					alt3 = 2;
				}
				else
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 3, 2, input, 2);
					DebugRecognitionException(nvae);
					throw nvae;
				}
				}
				break;
			case MUTABLE:
				{
				alt3 = 2;
				}
				break;
			default:
				{
					if (state.backtracking>0) {state.failed=true; return retval;}
					NoViableAltException nvae = new NoViableAltException("", 3, 0, input, 1);
					DebugRecognitionException(nvae);
					throw nvae;
				}
			}

			} finally { DebugExitDecision(3); }
			switch (alt3)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\fsharp_compiler\\fsharp_ss.g:130:8: function_defn
				{
				DebugLocation(130, 8);
				PushFollow(Follow._function_defn_in_let_expr998);
				function_defn9=function_defn();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, function_defn9.Tree);

				}
				break;
			case 2:
				DebugEnterAlt(2);
				// D:\\fsharp_compiler\\fsharp_ss.g:130:24: value_defn
				{
				DebugLocation(130, 24);
				PushFollow(Follow._value_defn_in_let_expr1002);
				value_defn10=value_defn();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) adaptor.AddChild(root_0, value_defn10.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(3); }


			}

			retval.Stop = (IToken)input.LT(-1);

			if (state.backtracking == 0) {
			retval.Tree = (object)adaptor.RulePostProcessing(root_0);
			adaptor.SetTokenBoundaries(retval.Tree, retval.Start, retval.Stop);
			}
		}
		catch (RecognitionException re)
		{
			ReportError(re);
			Recover(input,re);
			retval.Tree = (object)adaptor.ErrorNode(input, retval.Start, input.LT(-1), re);

		}
		finally
		{
			TraceOut("let_expr", 4);
			LeaveRule("let_expr", 4);
			LeaveRule_let_expr();
		}
		DebugLocation(131, 1);
		} finally { DebugExitRule(GrammarFileName, "let_expr"); }
		return retval;

	}
	// $ANTLR end "let_expr"

	partial void EnterRule_function_defn();
	partial void LeaveRule_function_defn();
	// $ANTLR start "function_defn"
	// D:\\fsharp_compiler\\fsharp_ss.g:133:1: function_defn : ( REC )? ID ( function_args )+ ( return_type )? '=' body_expr -> ^( FUNCTION_DEFN ^( NAME ID ) ( REC )? ^( ARGS ( function_args )+ ) ^( TYPE ( return_type )? ) body_expr ) ;
	[GrammarRule("function_defn")]
	private AstParserRuleReturnScope<object, IToken> function_defn()
	{
		EnterRule_function_defn();
		EnterRule("function_defn", 5);
		TraceIn("function_defn", 5);
		AstParserRuleReturnScope<object, IToken> retval = new AstParserRuleReturnScope<object, IToken>();
		retval.Start = (IToken)input.LT(1);

		object root_0 = default(object);

		IToken REC11 = default(IToken);
		IToken ID12 = default(IToken);
		IToken char_literal15 = default(IToken);
		AstParserRuleReturnScope<object, IToken> function_args13 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> return_type14 = default(AstParserRuleReturnScope<object, IToken>);
		AstParserRuleReturnScope<object, IToken> body_expr16 = default(AstParserRuleReturnScope<object, IToken>);

		object REC11_tree = default(object);
		object ID12_tree = default(object);
		object char_literal15_tree = default(object);
		RewriteRuleITokenStream stream_REC=new RewriteRuleITokenStream(adaptor,"token REC");
		RewriteRuleITokenStream stream_ID=new RewriteRuleITokenStream(adaptor,"token ID");
		RewriteRuleITokenStream stream_EQ=new RewriteRuleITokenStream(adaptor,"token EQ");
		RewriteRuleSubtreeStream stream_return_type=new RewriteRuleSubtreeStream(adaptor,"rule return_type");
		RewriteRuleSubtreeStream stream_body_expr=new RewriteRuleSubtreeStream(adaptor,"rule body_expr");
		RewriteRuleSubtreeStream stream_function_args=new RewriteRuleSubtreeStream(adaptor,"rule function_args");
		try { DebugEnterRule(GrammarFileName, "function_defn");
		DebugLocation(133, 1);
		try
		{
			// D:\\fsharp_compiler\\fsharp_ss.g:134:2: ( ( REC )? ID ( function_args )+ ( return_type )? '=' body_expr -> ^( FUNCTION_DEFN ^( NAME ID ) ( REC )? ^( ARGS ( function_args )+ ) ^( TYPE ( return_type )? ) body_expr ) )
			DebugEnterAlt(1);
			// D:\\fsharp_compiler\\fsharp_ss.g:135:2: ( REC )? ID ( function_args )+ ( return_type )? '=' body_expr
			{
			DebugLocation(135, 2);
			// D:\\fsharp_compiler\\fsharp_ss.g:135:2: ( REC )?
			int alt4=2;
			try { DebugEnterSubRule(4);
			try { DebugEnterDecision(4, false);
			int LA4_1 = input.LA(1);

			if ((LA4_1==REC))
			{
				alt4 = 1;
			}
			} finally { DebugExitDecision(4); }
			switch (alt4)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\fsharp_compiler\\fsharp_ss.g:135:2: REC
				{
				DebugLocation(135, 2);
				REC11=(IToken)Match(input,REC,Follow._REC_in_function_defn1016); if (state.failed) return retval; 
				if (state.backtracking == 0) stream_REC.Add(REC11);


				}
				break;

			}
			} finally { DebugExitSubRule(4); }

			DebugLocation(135, 7);
			ID12=(IToken)Match(input,ID,Follow._ID_in_function_defn1019); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_ID.Add(ID12);

			DebugLocation(135, 10);
			// D:\\fsharp_compiler\\fsharp_ss.g:135:10: ( function_args )+
			int cnt5=0;
			try { DebugEnterSubRule(5);
			while (true)
			{
				int alt5=2;
				try { DebugEnterDecision(5, false);
				int LA5_1 = input.LA(1);

				if ((LA5_1==ID||LA5_1==OPEN_BR))
				{
					alt5 = 1;
				}


				} finally { DebugExitDecision(5); }
				switch (alt5)
				{
				case 1:
					DebugEnterAlt(1);
					// D:\\fsharp_compiler\\fsharp_ss.g:135:10: function_args
					{
					DebugLocation(135, 10);
					PushFollow(Follow._function_args_in_function_defn1021);
					function_args13=function_args();
					PopFollow();
					if (state.failed) return retval;
					if (state.backtracking == 0) stream_function_args.Add(function_args13.Tree);

					}
					break;

				default:
					if (cnt5 >= 1)
						goto loop5;

					if (state.backtracking>0) {state.failed=true; return retval;}
					EarlyExitException eee5 = new EarlyExitException( 5, input );
					DebugRecognitionException(eee5);
					throw eee5;
				}
				cnt5++;
			}
			loop5:
				;

			} finally { DebugExitSubRule(5); }

			DebugLocation(135, 25);
			// D:\\fsharp_compiler\\fsharp_ss.g:135:25: ( return_type )?
			int alt6=2;
			try { DebugEnterSubRule(6);
			try { DebugEnterDecision(6, false);
			int LA6_1 = input.LA(1);

			if ((LA6_1==63))
			{
				alt6 = 1;
			}
			} finally { DebugExitDecision(6); }
			switch (alt6)
			{
			case 1:
				DebugEnterAlt(1);
				// D:\\fsharp_compiler\\fsharp_ss.g:135:25: return_type
				{
				DebugLocation(135, 25);
				PushFollow(Follow._return_type_in_function_defn1024);
				return_type14=return_type();
				PopFollow();
				if (state.failed) return retval;
				if (state.backtracking == 0) stream_return_type.Add(return_type14.Tree);

				}
				break;

			}
			} finally { DebugExitSubRule(6); }

			DebugLocation(135, 38);
			char_literal15=(IToken)Match(input,EQ,Follow._EQ_in_function_defn1027); if (state.failed) return retval; 
			if (state.backtracking == 0) stream_EQ.Add(char_literal15);
